--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,26 @@
-# services:
+services:
+  backend:
+    build:
+      context: ./backend
+    ports:
+      - 8000:8000
+    env_file:
+      - .env
+    volumes:
+      - ./backend:/backend
+    depends_on:
+      - postgres-db
+
+  postgres-db:
+    image: postgres:16
+    # check if env_file replaces need for environment variables hardcoded
+    env_file:
+      - .env
+    # environment:
+    #   POSTGRES_DB: sol_bank_db
+    #   POSTGRES_USER: sol_bank_user
+    #   POSTGRES_PASSWORD: changeme
+    ports:
+      - 5432:5432
+    volumes:
+      - ./postgres-db:/var/lib/postgresql/data
