--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       - .env
     volumes:
       - ./backend:/backend
+    command: >
+      sh -c " python manage.py migrate && \
+              python manage.py runserver 0.0.0.0:8000"
     depends_on:
       - postgres-db
 
@@ -23,4 +26,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./postgres-db:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
